<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/appointments"
        android:icon="@drawable/ic_appointments"
        android:orderInCategory="5"
        android:title="appointments"
        app:showAsAction="always" />
    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news"
        android:orderInCategory="6"
        android:title="@string/news"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profil"
        android:orderInCategory="7"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:orderInCategory="8"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>